[fix] Resolve issue on small screeens

--- a/themes/unitexgramlab/css/unitexgramlab.css
+++ b/themes/unitexgramlab/css/unitexgramlab.css
@@ -5627,7 +5627,7 @@ table.alt tbody tr td {
   }
   .banner h1 {
     font-size: 2em;
-    margin-top: 0.5em;
+    margin-top: 2.6em;
   }
   .banner p {
     font-size: 1em;
