--- a/themes/unitexgramlab/sass/layout/_banner.scss
+++ b/themes/unitexgramlab/sass/layout/_banner.scss
@@ -151,7 +151,7 @@
           
       h1 {
         font-size: 2em;
-        margin-top: 0.5em;
+        margin-top: 2.6em;
       }
 
       p {
